revert(context): remove page knowledge-pill extraction (#29119)
Reverts the Context Center *page* extraction pipeline (generic
ContextProcessingEngine + File/Page engines, ContextMemoryReconciler,
sourceEntity generalization, ExtractedMemoriesCard UI). Keeps the frozen
ContextMemory/ContextFile/Page schemas, file-side sourceFile handling
(removed later with #28973), and all follow-on work (pinning, pagination,
attachment widget, ui-core-components migration).

This reverts commit 506c8c90a4b09ea267153a0314b6a9820c120dbc.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>